--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body{
     background-image:url(images/bg-desktop.svg) ;
     background-size: cover;
 }
+.logo{
+    
+    display: block;
+    width: 150px;
+    height: auto;
+      
+      
+}
