feat: made several changes

--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body{
     background-image:url(images/bg-desktop.svg) ;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    color: white;
+    height: 100vh;
+
+}
+.container{
+    max-width: 900px;
+    width: 90%;
 }
 .logo{
     
@@ -9,4 +18,14 @@ body{
     display: flex;
     align-items: center;  
       
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    align-items: center;
+    gap: 40px;
+}
+.card-illustration{
+
 }
